--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
+    "prodStart": "PORT=8080 NODE_ENV=production node app.js",
+    "devStart": "PORT=8080 NODE_ENV=development node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1"
   },
